Add missing TestInfo=advanced fields to maths.ini
Some meta data in maths.ini had AdvancedTest.* fields present but the
required TestInfo=advanced field was missing. AdvancedTest.* fields
should be ignored if TestInfo=advanced is not present.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1958,6 +1958,7 @@ DescEx="<p>Normalises the values in floating point array <var>A</var> so that ea
 Kind=routine
 Units=SysUtils,Types,Math
 SeeAlso=RescaleRange_Double,WeightedArithMean_Double,NormaliseByWeight_Cardinal
+TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=668.dat
@@ -1970,6 +1971,7 @@ DescEx="<p>Normalises the values in unsigned integer array <var>A</var> so that 
 Kind=routine
 Units=SysUtils,Types
 SeeAlso=RescaleRange_Integer,WeightedArithMean_Integer,NormaliseByWeight_Double
+TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=671.dat
@@ -1983,6 +1985,7 @@ Kind=routine
 Units=Math
 Depends=MinMaxOfArray_Double
 SeeAlso=RangeOf_Integer,RescaleRange_Double
+TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=672.dat
@@ -1995,6 +1998,7 @@ DescEx="<p>Returns the length of the range of values in non-empty <var>Integer</
 Kind=routine
 Depends=MinMaxOfArray_Integer
 SeeAlso=RangeOf_Double,RescaleRange_Integer
+TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=673.dat
