Add 6 geometric mean routines to Maths category
Added Integer, Cardinal and Double overloads of both GeoMean and
WeightedGeoMean functions.

Added source code file for each routine.

Added meta data about each function to maths.ini

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2004,3 +2004,90 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=673.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[GeoMean_Double]
+DisplayName="GeoMean (Double overload)"
+DescEx="<p>Returns the geometric mean of an array of positive <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty while <var>EArgumentOutOfRangeException</var> is raised if any array element is not positive.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia</a> for information about the geometric mean.</p>"
+Kind=routine
+Units=SysUtils
+Depends=SumOfLogs_Double
+SeeAlso=ArithMean_Double,GeoMean_Integer,GeoMean_Cardinal,WeightedGeoMean_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=675.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[GeoMean_Cardinal]
+DisplayName="GeoMean (Cardinal overload)"
+DescEx="<p>Returns the geometric mean of an array of positive <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty while <var>EArgumentOutOfRangeException</var> is raised if any array element is not positive.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia</a> for information about the geometric mean.</p>"
+Kind=routine
+Units=SysUtils
+Depends=SumOfLogs_Cardinal
+SeeAlso=ArithMean_Cardinal,GeoMean_Integer,GeoMean_Double,WeightedGeoMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=676.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[GeoMean_Integer]
+DisplayName="GeoMean (Integer overload)"
+DescEx="<p>Returns the geometric mean of an array of positive <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty while <var>EArgumentOutOfRangeException</var> is raised if any array element is not positive.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia</a> for information about the geometric mean.</p>"
+Kind=routine
+Units=SysUtils
+Depends=SumOfLogs_Integer
+SeeAlso=ArithMean_Integer,GeoMean_Cardinal,GeoMean_Double,WeightedGeoMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=677.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedGeoMean_Double]
+DisplayName="WeightedGeoMean (Double overload)"
+DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>Value</var> of positive <var>Double</var> values where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; all elements of <var>Values</var> must be positive; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
+Units=SysUtils,Types
+Depends=NormaliseByWeight_Double
+SeeAlso=GeoMean_Double,WeightedArithMean_Double,WeightedGeoMean_Cardinal,WeightedGeoMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=678.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedGeoMean_Cardinal]
+DisplayName="WeightedGeoMean (Cardinal overload)"
+DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>Value</var> of positive <var>Cardinal</var> values where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; all elements of <var>Values</var> must be positive; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
+Units=Types
+Depends=WeightedGeoMean_Double
+SeeAlso=GeoMean_Cardinal,WeightedArithMean_Cardinal,WeightedGeoMean_Double,WeightedGeoMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=679.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedGeoMean_Integer]
+DisplayName="WeightedGeoMean (Integer overload)"
+DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>Value</var> of positive <var>Integer</var> values where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; all elements of <var>Values</var> must be positive; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
+Units=Types
+Depends=WeightedGeoMean_Double
+SeeAlso=GeoMean_Integer,WeightedArithMean_Integer,WeightedGeoMean_Double,WeightedGeoMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=680.dat
+DelphiXE=Y
+Delphi12A=Y
