Add 6 new functions to Maths category
Added Double, Cardinal and Integer overloads of new SumOfReciprocals and
HarmonicMean routines.

Added a source code file for each routine.

Updated maths.ini with meta data for each new routine.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2091,3 +2091,78 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=680.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[SumOfReciprocals_Double]
+DisplayName="SumOfReciprocals (Double overload)"
+DescEx="<p>Calculates the sum of the reciprocal values of all elements of <var>Double</var> array <var>A</var>.</p><p><var>A</var> must not be empty and all its elements must be positive. <var>EArgumentException</var> is raised if either of these conditions is not satisfied.</p>"
+Units=SysUtils,Math
+SeeAlso=SumOfReciprocals_Integer,SumOfReciprocals_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=681.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[SumOfReciprocals_Integer]
+DisplayName="SumOfReciprocals (Integer overload)"
+DescEx="<p>Calculates the sum of the reciprocal values of all elements of <var>Integer</var> array <var>A</var>.</p><p><var>A</var> must not be empty and all its elements must be positive. <var>EArgumentException</var> is raised if either of these conditions is not satisfied.</p>"
+Units=SysUtils
+SeeAlso=SumOfReciprocals_Integer,SumOfReciprocals_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=682.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[SumOfReciprocals_Cardinal]
+DisplayName="SumOfReciprocals (Cardinal overload)"
+DescEx="<p>Calculates the sum of the reciprocal values of all elements of <var>Cardinal</var> array <var>A</var>.</p><p><var>A</var> must not be empty and all its elements must be positive. <var>EArgumentException</var> is raised if either of these conditions is not satisfied.</p>"
+Units=SysUtils
+SeeAlso=SumOfReciprocals_Double,SumOfReciprocals_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=683.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[HarmonicMean_Double]
+DisplayName="HarmonicMean (Double overload)"
+DescEx="<p>Returns the harmonic mean of an array of positive <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
+Depends=SumOfReciprocals_Double
+SeeAlso=HarmonicMean_Integer,HarmonicMean_Cardinal,ArithMean_Double,GeoMean_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=684.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[HarmonicMean_Cardinal]
+DisplayName="HarmonicMean (Cardinal overload)"
+DescEx="<p>Returns the harmonic mean of an array of positive <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
+Depends=SumOfReciprocals_Cardinal
+SeeAlso=HarmonicMean_Double,HarmonicMean_Integer,ArithMean_Cardinal,GeoMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=685.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[HarmonicMean_Integer]
+DisplayName="HarmonicMean (Integer overload)"
+DescEx="<p>Returns the harmonic mean of an array of positive <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
+Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
+Depends=SumOfReciprocals_Integer
+SeeAlso=HarmonicMean_Cardinal,HarmonicMean_Double,ArithMean_Integer,GeoMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=686.dat
+DelphiXE=Y
+Delphi12A=Y
