--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1684,11 +1684,11 @@ DelphiXE4=Y
 Delphi10S=Y
 FPC=Y
 
-[ArithMean_Double]
-DisplayName="ArithMean (Double overload)"
+[ArithmeticMean_Double]
+DisplayName="ArithmeticMean (Double overload)"
 DescEx="<p>Returns the arithmetic mean of an array of <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
 Units=SysUtils
-SeeAlso=ArithMean_Integer,ArithMean_Cardinal
+SeeAlso=ArithmeticMean_Integer,ArithmeticMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1696,11 +1696,11 @@ Snip=650.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[ArithMean_Integer]
-DisplayName="ArithMean (Integer overload)"
+[ArithmeticMean_Integer]
+DisplayName="ArithmeticMean (Integer overload)"
 DescEx="<p>Returns the arithmetic mean of an array of <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
 Units=SysUtils
-SeeAlso=ArithMean_Double,ArithMean_Cardinal
+SeeAlso=ArithmeticMean_Double,ArithmeticMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1708,11 +1708,11 @@ Snip=651.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[ArithMean_Cardinal]
-DisplayName="ArithMean (Cardinal overload)"
+[ArithmeticMean_Cardinal]
+DisplayName="ArithmeticMean (Cardinal overload)"
 DescEx="<p>Returns the arithmetic mean of an array of <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
 Units=SysUtils
-SeeAlso=ArithMean_Double,ArithMean_Integer
+SeeAlso=ArithmeticMean_Double,ArithmeticMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1720,11 +1720,11 @@ Snip=652.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[WeightedArithMean_Double]
-DisplayName="WeightedArithMean (Double overload)"
+[WeightedArithmeticMean_Double]
+DisplayName="WeightedArithmeticMean (Double overload)"
 DescEx="<p>Calculates and returns the weighted average of the <var>Double</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Units=SysUtils,Math
-SeeAlso=ArithMean_Double,WeightedArithMean_Integer,WeightedArithMean_Cardinal
+SeeAlso=ArithmeticMean_Double,WeightedArithmeticMean_Integer,WeightedArithmeticMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1732,12 +1732,12 @@ Snip=653.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[WeightedArithMean_Integer]
-DisplayName="WeightedArithMean (Integer overload)"
+[WeightedArithmeticMean_Integer]
+DisplayName="WeightedArithmeticMean (Integer overload)"
 DescEx="<p>Calculates and returns the weighted average of the <var>Integer</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Units=
-Depends=WeightedArithMean_Double
-SeeAlso=ArithMean_Integer,WeightedArithMean_Double,WeightedArithMean_Cardinal
+Depends=WeightedArithmeticMean_Double
+SeeAlso=ArithmeticMean_Integer,WeightedArithmeticMean_Double,WeightedArithmeticMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1745,12 +1745,12 @@ Snip=654.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[WeightedArithMean_Cardinal]
-DisplayName="WeightedArithMean (Cardinal overload)"
+[WeightedArithmeticMean_Cardinal]
+DisplayName="WeightedArithmeticMean (Cardinal overload)"
 DescEx="<p>Calculates and returns the weighted average of the <var>Cardinal</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Units=
-Depends=WeightedArithMean_Double
-SeeAlso=ArithMean_Cardinal,WeightedArithMean_Double,WeightedArithMean_Integer
+Depends=WeightedArithmeticMean_Double
+SeeAlso=ArithmeticMean_Cardinal,WeightedArithmeticMean_Double,WeightedArithmeticMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1957,7 +1957,7 @@ DisplayName="NormaliseByWeight (Double overload)"
 DescEx="<p>Normalises the values in floating point array <var>A</var> so that each value of <var>A</var> is mapped to a value in the range [0..1], where the total of all the values is 1. The relative weights of the values are preserved.</p><p>An array of the same size as <var>A</var> is returned where each element contains the normalised value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty. All elements of <var>A</var> must be &gt;= 0, with at least one element &gt; 0. <var>EArgumentException</var> is raised if these conditions are not met.</p>"
 Kind=routine
 Units=SysUtils,Types,Math
-SeeAlso=RescaleRange_Double,WeightedArithMean_Double,NormaliseByWeight_Cardinal
+SeeAlso=RescaleRange_Double,WeightedArithmeticMean_Double,NormaliseByWeight_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1970,7 +1970,7 @@ DisplayName="NormaliseByWeight (Cardinal overload)"
 DescEx="<p>Normalises the values in unsigned integer array <var>A</var> so that each value of <var>A</var> is mapped to a value in the range [0..1], where the total of all the values is 1. The relative weights of the values are preserved.</p><p>An array of the same size as <var>A</var> is returned where each element contains the normalised value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty and must have at least one non-zero element. <var>EArgumentException</var> is raised if these conditions are not met.</p>"
 Kind=routine
 Units=SysUtils,Types
-SeeAlso=RescaleRange_Integer,WeightedArithMean_Integer,NormaliseByWeight_Double
+SeeAlso=RescaleRange_Integer,WeightedArithmeticMean_Integer,NormaliseByWeight_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2005,14 +2005,14 @@ Snip=673.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[GeoMean_Double]
-DisplayName="GeoMean (Double overload)"
+[GeometricMean_Double]
+DisplayName="GeometricMean (Double overload)"
 DescEx="<p>Returns the geometric mean of an array of positive <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty while <var>EArgumentOutOfRangeException</var> is raised if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia</a> for information about the geometric mean.</p>"
 Kind=routine
 Units=SysUtils
 Depends=SumOfLogs_Double
-SeeAlso=ArithMean_Double,GeoMean_Integer,GeoMean_Cardinal,WeightedGeoMean_Double
+SeeAlso=ArithmeticMean_Double,GeometricMean_Integer,GeometricMean_Cardinal,WeightedGeometricMean_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2020,14 +2020,14 @@ Snip=675.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[GeoMean_Cardinal]
-DisplayName="GeoMean (Cardinal overload)"
+[GeometricMean_Cardinal]
+DisplayName="GeometricMean (Cardinal overload)"
 DescEx="<p>Returns the geometric mean of an array of positive <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty while <var>EArgumentOutOfRangeException</var> is raised if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia</a> for information about the geometric mean.</p>"
 Kind=routine
 Units=SysUtils
 Depends=SumOfLogs_Cardinal
-SeeAlso=ArithMean_Cardinal,GeoMean_Integer,GeoMean_Double,WeightedGeoMean_Cardinal
+SeeAlso=ArithmeticMean_Cardinal,GeometricMean_Integer,GeometricMean_Double,WeightedGeometricMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2035,14 +2035,14 @@ Snip=676.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[GeoMean_Integer]
-DisplayName="GeoMean (Integer overload)"
+[GeometricMean_Integer]
+DisplayName="GeometricMean (Integer overload)"
 DescEx="<p>Returns the geometric mean of an array of positive <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty while <var>EArgumentOutOfRangeException</var> is raised if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia</a> for information about the geometric mean.</p>"
 Kind=routine
 Units=SysUtils
 Depends=SumOfLogs_Integer
-SeeAlso=ArithMean_Integer,GeoMean_Cardinal,GeoMean_Double,WeightedGeoMean_Integer
+SeeAlso=ArithmeticMean_Integer,GeometricMean_Cardinal,GeometricMean_Double,WeightedGeometricMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2050,13 +2050,13 @@ Snip=677.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[WeightedGeoMean_Double]
-DisplayName="WeightedGeoMean (Double overload)"
+[WeightedGeometricMean_Double]
+DisplayName="WeightedGeometricMean (Double overload)"
 DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>Values</var> of positive <var>Double</var> values where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; all elements of <var>Values</var> must be positive; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
 Units=SysUtils,Types
 Depends=NormaliseByWeight_Double
-SeeAlso=GeoMean_Double,WeightedArithMean_Double,WeightedGeoMean_Cardinal,WeightedGeoMean_Integer
+SeeAlso=GeometricMean_Double,WeightedArithmeticMean_Double,WeightedGeometricMean_Cardinal,WeightedGeometricMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2064,13 +2064,13 @@ Snip=678.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[WeightedGeoMean_Cardinal]
-DisplayName="WeightedGeoMean (Cardinal overload)"
+[WeightedGeometricMean_Cardinal]
+DisplayName="WeightedGeometricMean (Cardinal overload)"
 DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>Values</var> of positive <var>Cardinal</var> values where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; all elements of <var>Values</var> must be positive; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
 Units=Types
-Depends=WeightedGeoMean_Double
-SeeAlso=GeoMean_Cardinal,WeightedArithMean_Cardinal,WeightedGeoMean_Double,WeightedGeoMean_Integer
+Depends=WeightedGeometricMean_Double
+SeeAlso=GeometricMean_Cardinal,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Double,WeightedGeometricMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2078,13 +2078,13 @@ Snip=679.dat
 DelphiXE=Y
 Delphi12A=Y
 
-[WeightedGeoMean_Integer]
-DisplayName="WeightedGeoMean (Integer overload)"
+[WeightedGeometricMean_Integer]
+DisplayName="WeightedGeometricMean (Integer overload)"
 DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>Values</var> of positive <var>Integer</var> values where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; all elements of <var>Values</var> must be positive; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
 Units=Types
-Depends=WeightedGeoMean_Double
-SeeAlso=GeoMean_Integer,WeightedArithMean_Integer,WeightedGeoMean_Double,WeightedGeoMean_Cardinal
+Depends=WeightedGeometricMean_Double
+SeeAlso=GeometricMean_Integer,WeightedArithmeticMean_Integer,WeightedGeometricMean_Double,WeightedGeometricMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2133,7 +2133,7 @@ DisplayName="HarmonicMean (Double overload)"
 DescEx="<p>Returns the harmonic mean of an array of positive <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
 Depends=SumOfReciprocals_Double
-SeeAlso=HarmonicMean_Integer,HarmonicMean_Cardinal,ArithMean_Double,GeoMean_Double
+SeeAlso=HarmonicMean_Integer,HarmonicMean_Cardinal,ArithmeticMean_Double,GeometricMean_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2146,7 +2146,7 @@ DisplayName="HarmonicMean (Cardinal overload)"
 DescEx="<p>Returns the harmonic mean of an array of positive <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
 Depends=SumOfReciprocals_Cardinal
-SeeAlso=HarmonicMean_Double,HarmonicMean_Integer,ArithMean_Cardinal,GeoMean_Cardinal
+SeeAlso=HarmonicMean_Double,HarmonicMean_Integer,ArithmeticMean_Cardinal,GeometricMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2159,7 +2159,7 @@ DisplayName="HarmonicMean (Integer overload)"
 DescEx="<p>Returns the harmonic mean of an array of positive <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
 Depends=SumOfReciprocals_Integer
-SeeAlso=HarmonicMean_Cardinal,HarmonicMean_Double,ArithMean_Integer,GeoMean_Integer
+SeeAlso=HarmonicMean_Cardinal,HarmonicMean_Double,ArithmeticMean_Integer,GeometricMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2174,7 +2174,7 @@ Extra="<p>See <a href="https://en.wikipedia.org/wiki/Harmonic_mean#Weighted_harm
 Kind=routine
 Units=SysUtils,Types
 Depends=NormaliseByWeight_Double
-SeeAlso=HarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedHarmonicMean_Integer,WeightedArithMean_Double,WeightedGeoMean_Double
+SeeAlso=HarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedHarmonicMean_Integer,WeightedArithmeticMean_Double,WeightedGeometricMean_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2189,7 +2189,7 @@ Extra="<p>See <a href="https://en.wikipedia.org/wiki/Harmonic_mean#Weighted_harm
 Kind=routine
 Units=Types
 Depends=WeightedHarmonicMean_Double
-SeeAlso=HarmonicMean_Cardinal,WeightedHarmonicMean_Double,WeightedHarmonicMean_Integer,WeightedArithMean_Cardinal,WeightedGeoMean_Cardinal
+SeeAlso=HarmonicMean_Cardinal,WeightedHarmonicMean_Double,WeightedHarmonicMean_Integer,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2204,7 +2204,7 @@ Extra="<p>See <a href="https://en.wikipedia.org/wiki/Harmonic_mean#Weighted_harm
 Kind=routine
 Units=Types
 Depends=WeightedHarmonicMean_Double
-SeeAlso=HarmonicMean_Integer,WeightedHarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedArithMean_Integer,WeightedGeoMean_Integer
+SeeAlso=HarmonicMean_Integer,WeightedHarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedArithmeticMean_Integer,WeightedGeometricMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
