Add new LogarithmicMean function to Maths category
Added source code .dat file for the function.

Added meta data for the function to maths.ini.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2211,3 +2211,17 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=689.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[LogarithmicMean]
+DisplayName="LogarithmicMean"
+DescEx="<p>Returns the logarithmic mean of two positive floating point values, <var>X</var> and <var>Y</var>.</p><p>Raises <var>EArgumentException</var> if either <var>X</var> or <var>Y</var> is not positive.</p>"
+Extra="<p>See <a href="https://www.ryantoomey.org/wiki/Logarithmic_mean_average">Chemepedia</a> for information about the logarithmic mean.</p>"
+Kind=routine
+Units=SysUtils,Math
+SeeAlso=ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=690.dat
+DelphiXE=Y
+Delphi12A=Y
