Add various power mean functions to Maths category
Added Double, Cardinal & Integer overloads of PowerMean &
WeightedPowerMean functions.

Added source code files for each function.

Added meta data for each function to maths.ini.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2225,3 +2225,92 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=690.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[PowerMean_Double]
+DisplayName="PowerMean (Double overload)"
+DescEx="<p>Returns the power mean of the elements of <var>Double</var> array <var>Values</var>, with exponent <var>Lambda</var>.</p><p>An <var>EArgumentException</var> is raised if the array is empty, if any array element is negative or if <var>Lambda</var> is zero.</p>"
+Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em> and the <em>Holder mean</em>.</p><p>See <a href="https://en.m.wikipedia.org/wiki/Generalized_mean">Wikipedia</a> for further information.</p>"
+Kind=routine
+Units=SysUtils,Math
+SeeAlso=ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Cardinal,PowerMean_Integer,LogarithmicMean,WeightedPowerMean_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=691.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[PowerMean_Integer]
+DisplayName="PowerMean (Integer overload)"
+DescEx="<p>Returns the power mean of the elements of <var>Integer</var> array <var>Values</var>, with exponent <var>Lambda</var>.</p><p>An <var>EArgumentException</var> is raised if the array is empty, if any array element is negative or if <var>Lambda</var> is zero.</p>"
+Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em> and the <em>Holder mean</em>.</p><p>See <a href="https://en.m.wikipedia.org/wiki/Generalized_mean">Wikipedia</a> for further information.</p>"
+Kind=routine
+Units=Types
+Depends=PowerMean_Double
+SeeAlso=ArithmeticMean_Integer,GeometricMean_Integer,HarmonicMean_Integer,PowerMean_Double,PowerMean_Cardinal,LogarithmicMean,WeightedPowerMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=692.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[PowerMean_Cardinal]
+DisplayName="PowerMean (Cardinal overload)"
+DescEx="<p>Returns the power mean of the elements of <var>Cardinal</var> array <var>Values</var>, with exponent <var>Lambda</var>.</p><p>An <var>EArgumentException</var> is raised if the array is empty or if <var>Lambda</var> is zero.</p>"
+Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em> and the <em>Holder mean</em>.</p><p>See <a href="https://en.m.wikipedia.org/wiki/Generalized_mean">Wikipedia</a> for further information.</p>"
+Kind=routine
+Units=Types
+Depends=PowerMean_Double
+SeeAlso=ArithmeticMean_Cardinal,GeometricMean_Cardinal,HarmonicMean_Cardinal,PowerMean_Double,PowerMean_Integer,LogarithmicMean,WeightedPowerMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=693.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedPowerMean_Double]
+DisplayName="WeightedPowerMean (Double overload)"
+DescEx="<p>Returns the weighted power mean of the elements of <var>Double</var> array <var>Values</var>, with exponent <var>Lambda</var>. Each term is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; no element of <var>Values</var> may be negative; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero; <var>Lambda</var> must not be zero.</p>"
+Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em> and the <em>Holder mean</em>.</p><p>See <a href="https://www.statisticshowto.com/power-mean-generalized-mean/">Statistics How To</a> for further information.</p>"
+Kind=routine
+Units=SysUtils,Types,Math
+Depends=NormaliseByWeight_Double
+SeeAlso=WeightedArithmeticMean_Double,WeightedGeometricMean_Double,WeightedHarmonicMean_Double,PowerMean_Double,WeightedPowerMean_Cardinal,WeightedPowerMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=694.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedPowerMean_Integer]
+DisplayName="WeightedPowerMean (Integer overload)"
+DescEx="<p>Returns the weighted power mean of the elements of <var>Integer</var> array <var>Values</var>, with exponent <var>Lambda</var>. Each term is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; no element of <var>Values</var> may be negative; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero; <var>Lambda</var> must not be zero.</p>"
+Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em> and the <em>Holder mean</em>.</p><p>See <a href="https://www.statisticshowto.com/power-mean-generalized-mean/">Statistics How To</a> for further information.</p>"
+Kind=routine
+Units=Types
+Depends=WeightedPowerMean_Double
+SeeAlso=WeightedArithmeticMean_Integer,WeightedGeometricMean_Integer,WeightedHarmonicMean_Integer,PowerMean_Integer,WeightedPowerMean_Cardinal,WeightedPowerMean_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=695.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedPowerMean_Cardinal]
+DisplayName="WeightedPowerMean (Cardinal overload)"
+DescEx="<p>Returns the weighted power mean of the elements of <var>Cardinal</var> array <var>Values</var>, with exponent <var>Lambda</var>. Each term is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero; <var>Lambda</var> must not be zero.</p>"
+Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em> and the <em>Holder mean</em>.</p><p>See <a href="https://www.statisticshowto.com/power-mean-generalized-mean/">Statistics How To</a> for further information.</p>"
+Kind=routine
+Units=Types
+Depends=WeightedPowerMean_Double
+SeeAlso=WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Cardinal,WeightedHarmonicMean_Cardinal,PowerMean_Cardinal,WeightedPowerMean_Double,WeightedPowerMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=696.dat
+DelphiXE=Y
+Delphi12A=Y
