Add 5 new functions to Maths category
Added Mode, ModeAlt, ModeCount, HasMode functions along with helper
function CountOccurrences to the Mathematics category.

Added a source .dat file for each function.

Added meta data for the functions to maths.ini

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2314,3 +2314,76 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=696.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[Mode]
+DisplayName="Mode"
+DescEx="<p>Calculates the mode of array <var>A</var> of integer data. Returns an array containing the mode or modes of the data.</p><p>If the data has a single mode, then a single element array containing the mode is returned. If the data is multi-modal then all the modes are returned. If all data items occur with equal frequency then an array of all unique data items is returned. The returned data is sorted in ascending order.</p><p>Raises <var>EArgumentException</var> if <var>A</var> has fewer than two elements.</p>"
+Extra="<p>Some sources state that if all numbers in <var>A</var> occur the same number of times, and not all data items are the same, then no mode is defined. It is not obvious how this situation should be handled.</p><p>This function takes the same approach as the <a href="https://www.calculatorsoup.com/calculators/statistics/mean-median-mode.php">CalculatorSoup</a> online <em>Mean, Median, Mode</em> calculator. For example <mono>Mode([1,1,2,2,3,3])</mono> returns <mono>[1,2,3]</mono> while <mono>Mode([2,2,2])</mono> returns <mono>[2]</mono>.</p><p>Another solution is to return an empty array when there is no mode. This is the approach taken by <var>ModeAlt</var>.</p><p>See <a href="https://en.wikipedia.org/wiki/Mode_(statistics)">Wikipedia</a> for more information about mode.</p>"
+Kind=routine
+Units=SysUtils,Generics.Collections
+Depends=CountOccurrences
+SeeAlso=Median_Double,ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,ModeAlt
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=697.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[ModeAlt]
+DisplayName="ModeAlt"
+DescEx="<p>Calculates the mode of array <var>A</var> of integer data. Returns an array containing the mode or modes of the data, if any.</p><p>If the data has a single mode, then a single element array containing the mode is returned. If the data is multi-modal then all the modes are returned, sorted in ascending order. If all data items occur with equal frequency, and not all data items are the same, then there is no mode and an empty array is returned.</p><p>Raises <var>EArgumentException</var> if <var>A</var> has fewer than two elements.</p>"
+Extra="<p>Some sources state that if all numbers in <var>A</var> occur the same number of times, and not all data items are the same, then no mode is defined. It is not obvious how this situation should be handled.</p><p>This function returns an empty array when there is no mode. For example <mono>ModeAlt([1,1,2,2,3,3])</mono> returns an empty array while <mono>ModeAlt([2,2,2])</mono> returns <mono>[2]</mono>.</p><p>Another solution, adopted by <a href="https://www.calculatorsoup.com/calculators/statistics/mean-median-mode.php">CalculatorSoup</a> is to return all the unique elements of <var>A</var>. The <var>Mode</var> function also takes this approach.</p><p>See <a href="https://en.wikipedia.org/wiki/Mode_(statistics)">Wikipedia</a> for more information about mode.</p>"
+Kind=routine
+Units=SysUtils,Generics.Collections
+Depends=CountOccurrences
+SeeAlso=Median_Double,ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,Mode
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=698.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[CountOccurrences]
+DisplayName="CountOccurrences"
+DescEx="<p>Calculates the number of occurrences of each unique element of array <var>A</var>. An array of <var>TPair&lt;Integer,Cardinal&gt;</var> values is returned, where the <var>Key</var> field of each <var>TPair</var> element is the integer and the <var>Value</var> field is the number of times the integer occurs in <var>A</var>. The returned array is sorted on the <var>Key</var> field.</p><p>Raises <var>EArgumentException</var> if <var>A</var> is empty.</p>"
+Extra="<p>Examples of use and output:</p><p><mono>CountOccurrences([2,2,2])</mono> returns <mono>[(Key:2;Value:3)]</mono>.</p><p><mono>CountOccurrences([56,42,42,42,56,-66])</mono> returns <mono>[(Key:-66;Value:1),(Key:42;Value:3),(Key:56;Value:2)]</mono>. Note how the returned array is sorted.</p><p><mono>CountOccurrences([12])</mono> returns <mono>[Key:12;Value:2]</mono>.</p>"
+Kind=routine
+Units=SysUtils,Generics.Defaults,Generics.Collections
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=699.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[ModeCount]
+DisplayName="ModeCount"
+DescEx="<p>Returns the number of modes of integer array <var>A</var>.</p><p>Raises <var>EArgumentException</var> if <var>A</var> has fewer than two elements.</p>"
+Extra="<p>A return value of zero indicates that the value of the array have no mode. This is considered to be when every integer occurs the same number of times and not all data items are the same.</p><p><strong>Examples:</strong></p><p><mono>ModeCount([1,1,2,2,3,3])</mono> returns 0 because 1, 2 and 3 all occur the same number of times. The mode is undefined.</p><p><mono>ModeCount([2,2,2])</mono> returns 1 because all the integers are the same (the mode is 2).</p><p><mono>ModeCount([1,2,3,3,4,5])</mono> returns 1 (the mode is 3).</p><p><mono>ModeCount([1,2,2,3,3])</mono> returns 2 (the modes are 2 &amp; 3).</p><p>See <a href="https://en.wikipedia.org/wiki/Mode_(statistics)">Wikipedia</a> for more information about mode.</p>"
+Kind=routine
+Units=SysUtils,Generics.Collections
+Depends=CountOccurrences
+SeeAlso=Mode,ModeAlt,HasMode
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=700.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[HasMode]
+DisplayName="HasMode"
+DescEx="<p>Checks if the given array of integers <var>A</var> has a mode and returns True if so.</p><p>Raises <var>EArgumentException</var> if <var>A</var> has fewer than two elements.</p>"
+Extra="<p>An array of integers is considered to have a mode unless every integer occurs the same number of times and not all data items are the same.</p><p><strong>Examples:</strong></p><p><mono>HasNode([1,1,2,2,3,3])</mono> returns False because 1, 2 and 3 all occur the same number of times.</p><p><mono>HasNode([2,2,2])</mono> returns True because all the integers are the same (the mode is 2).</p><p><mono>HasNode([1,2,3,3,4,5])</mono> returns True (the mode is 3).</p><p><mono>HasNode([1,2,2,3,3])</mono> returns True (the modes are 2 &amp; 3).</p><p>See <a href="https://en.wikipedia.org/wiki/Mode_(statistics)">Wikipedia</a> for more information about mode.</p>"
+Kind=routine
+Units=SysUtils,Generics.Collections
+Depends=CountOccurrences
+SeeAlso=Mode,ModeAlt,ModeCount
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=701.dat
+DelphiXE=Y
+Delphi12A=Y
