A RMS functions to Maths category
Added Double & Integer overloads of the RMS function.

Added a source code file for each overload.

Updated maths.ini with the meta data for each function.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2387,3 +2387,31 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=701.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[RMS_Double]
+DisplayName="RMS (Double overload)"
+DescEx="<p>Calculates the root mean square of the elements of <var>Double</var> floating point array <var>A</var>.</p><p>Raises <var>EArgumentException</var> if <var>A</var> is empty.</p>"
+Kind=routine
+Units=SysUtils,Math
+Depends=ArithmeticMean_Double
+SeeAlso=RMS_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=702.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[RMS_Integer]
+DisplayName="RMS (Integer overload)"
+DescEx="<p>Calculates the root mean square of the elements of <var>Integer</var> array <var>A</var>.</p><p>Raises <var>EArgumentException</var> if <var>A</var> is empty.</p>"
+Kind=routine
+Units=SysUtils,Math
+Depends=ArithmeticMean_Double
+SeeAlso=RMS_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=703.dat
+DelphiXE=Y
+Delphi12A=Y
