Add total sum of squares functions to Maths category
Added Double and Integer overloads of TSS function to the Mathematices
category.

New source code files were added for each overload.

Meta data for both functions was added to maths.ini

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2415,3 +2415,31 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=703.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[TSS_Double]
+DisplayName="TSS (Double overload)"
+DescEx="<p>Calculates the statistical total sum of squares of the elements of <var>Double</var> array <var>A</var>.</p><p><var>EArgumentException</var> is raised if <var>A</var> is empty.</p>"
+Extra="<p>See <a href="https://en.wikipedia.org/wiki/Total_sum_of_squares">Wikipedia</a> for an explanation of the <var>TSS</var> function.</p><p><strong>Note:</strong> <var>TSS</var> is not the same as the <var>SumOfSquares</var> function in the Delphi RTL.</p>"
+Kind=routine
+Depends=ArithmeticMean_Double
+SeeAlso=TSS_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=704.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[TSS_Integer]
+DisplayName="TSS (Integer overload)"
+DescEx="<p>Calculates the statistical total sum of squares of the elements of <var>Integer</var> array <var>A</var>.</p><p><var>EArgumentException</var> is raised if <var>A</var> is empty.</p>"
+Extra="<p>See <a href="https://en.wikipedia.org/wiki/Total_sum_of_squares">Wikipedia</a> for an explanation of the <var>TSS</var> function.</p><p><strong>Note:</strong> <var>TSS</var> is not the same as the <var>SumOfSquares</var> function in the Delphi RTL.</p>"
+Kind=routine
+Depends=ArithmeticMean_Integer
+SeeAlso=TSS_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=705.dat
+DelphiXE=Y
+Delphi12A=Y
